# distkit

./: .env  CLAUDE.md  Cargo.toml  Makefile  README.md  compose.yaml
.github/workflows/: workflow.yml
benches/: common.rs  lax_counter.rs  lax_instance_aware_counter.rs  strict_counter.rs  strict_instance_aware_counter.rs
docs/: lib.md
src/: __doctest_helpers.rs  common.rs  comparator.rs  error.rs  lib.rs  trypema.rs
src/common/: activity_tracker.rs  mod.rs
src/counter/: common.rs  counter_trait.rs  error.rs  lax_counter.rs  mod.rs  strict_counter.rs
src/counter/tests/: common.rs  lax_counter.rs  mod.rs  strict_counter.rs
src/icounter/: instance_aware_counter.rs  lax_instance_aware_counter.rs  mod.rs  strict_instance_aware_counter.rs
src/icounter/tests/: common.rs  instance_aware_counter.rs  lax_instance_aware_counter.rs  mod.rs  strict_instance_aware_counter.rs
