[package]
name = "distkit"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
redis = { version = "1.1.0", features = ["aio", "connection-manager", "tokio-comp"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
